# datafusion-raquet

./: .env  Cargo.toml  README.md  STATUS.md  status.md  test.py
crates/datafusion-raquet/: Cargo.toml
crates/datafusion-raquet-python/: Cargo.toml
crates/datafusion-raquet-python/python/datafusion_raquet/: __init__.py  _internal.pyi  quadbin.pyi  rastertile.pyi
crates/datafusion-raquet-python/python/tests/: test_raquet_df.py
crates/datafusion-raquet-python/python/tests/reality/: test_raquet_df.py
crates/datafusion-raquet-python/python/tests/reality/quadbin/: test.py
crates/datafusion-raquet-python/python/tests/reality/raster/: test.py
crates/datafusion-raquet-python/src/: lib.rs  utils.rs
crates/datafusion-raquet-python/src/table_providers/: mod.rs
crates/datafusion-raquet-python/src/udf/: mod.rs  quadbin.rs  rastertile.rs
crates/datafusion-raquet/src/: error.rs  lib.rs
crates/datafusion-raquet/src/format/: file_format.rs  mod.rs  source.rs
crates/datafusion-raquet/src/metadata/: location.rs  metadata_filter.rs  mod.rs
crates/datafusion-raquet/src/metadata/format/: mod.rs
crates/datafusion-raquet/src/tables/: config.rs  raquet.rs
crates/datafusion-raquet/src/udf/: mod.rs
crates/datafusion-raquet/src/udf/general/: binary_to_raquet.rs  intersects.rs  mod.rs  testing.rs
crates/datafusion-raquet/src/udf/quadbin/: converter.rs  mod.rs  quadbin_from_lonlat.rs  quadbin_from_tile.rs  quadbin_kring.rs  quadbin_pixel_xy.rs  quadbin_polyfill.rs  quadbin_resolution.rs  quadbin_sibling.rs  quadbin_to_bbox.rs  quadbin_to_bbox_mercator.rs  quadbin_to_bbox_wgs84.rs  quadbin_to_children.rs  quadbin_to_geojson.rs  quadbin_to_lonlat.rs  quadbin_to_parent.rs  quadbin_to_tile.rs  quadbin_to_wkt.rs  testing.rs
crates/datafusion-raquet/src/udf/raster/: decode.rs  decompress.rs  mod.rs  native.rs  raquet_pixel.rs  raquet_value.rs  raster_value.rs  statistics.rs  test.rs  testing.rs  utils.rs
crates/datafusion-raquet/src/views/: mod.rs  read_raquet.rs  read_raquet_metadata.rs  util.rs
crates/geo-rasterizer/: Cargo.toml
crates/quadbin-geo-rs/: Cargo.toml
crates/quadbin-geo-rs/src/: base.rs  error.rs  formats.rs  lib.rs  proj.rs  tiles.rs  transforms.rs
crates/quadbin-rs/: Cargo.toml
crates/quadbin-rs/src/: constants.rs  error.rs  errors.rs  lib.rs
crates/quadbin-schema/: Cargo.toml
crates/quadbin-schema/src/: datatype.rs  error.rs  metadata.rs
crates/rasterarrow-schema/: Cargo.toml
crates/rasterarrow-schema/src/: datatype.rs  error.rs  metadata.rs  raquet_old.rs  type.rs
crates/rastertile-rs/: Cargo.toml
crates/rastertile-rs/src/: errors.rs  lib.rs  metadata.rs
crates/rastertile-rs/src/compression/: error.rs  gzip.rs  jpeg.rs  mod.rs  webp.rs
crates/rastertile-rs/src/core/: mod.rs
crates/rastertile-rs/src/core/buffer/: mod.rs
crates/rastertile-rs/src/core/error/: mod.rs  types.rs
crates/rastertile-rs/src/core/types/: data_type.rs  mod.rs
crates/rastertile-rs/src/data_types/: error.rs  mod.rs
crates/rastertile-rs/src/include/: band_decoder.rs  mod.rs
crates/rastertile-rs/src/metadata/: error.rs  mod.rs
crates/rastertile-rs/src/operations/: array.rs  data_type.rs  mod.rs  nd_array.rs
crates/rastertile-rs/src/raster/: mod.rs
crates/rastertile-rs/src/tile/: array.rs  data_type.rs  mod.rs
crates/rastertile-schema/: Cargo.toml
crates/rastertile-schema/src/: lib.rs  metadata.rs  type.rs
python/: Cargo.toml  pyproject.toml
python/python/datafusion_raquet/: __init__.py  _internal.pyi  rastertile.pyi  table_providers.pyi  view_tables.pyi
python/python/tests/reality/quadbin/: test.py
python/python/tests/reality/raster/: test.py
python/src/: lib.rs
python/src/udf/: rastertile.rs
python/src/view_tables/: mod.rs
rust/datafusion-raquet/: Cargo.toml
rust/datafusion-raquet/examples/: _complex.rs  _quadbin.rs  _read_parquet.rs  _read_raquet.rs  _read_raquet_at.rs  _read_raquet_metadata.rs  _simple.rs  _test.rs  complex.rs  metadata.rs  notes.md  quadbin.rs  raster.rs  read_raquet.rs  read_raquet_at.rs  read_raquet_metadata.rs  simple.rs  tile.rs
rust/datafusion-raquet/src/: lib.rs
rust/datafusion-raquet/src/format/: file_format.rs  source.rs
rust/datafusion-raquet/src/metadata/: location.rs  metadata_filter.rs  mod.rs
rust/datafusion-raquet/src/metadata/format/: error.rs  mod.rs
rust/datafusion-raquet/src/tables/: mod.rs  raquet.rs
rust/datafusion-raquet/src/udf/: mod.rs
rust/datafusion-raquet/src/udf/general/: band_metadata.rs  binary_to_raquet.rs  cast_raquet.rs  intersects.rs  mod.rs  quadbin_metadata.rs  quadbin_pixel_xy.rs  quadbin_polyfill.rs  testing.rs
rust/datafusion-raquet/src/udf/quadbin/: mod.rs  quadbin_from_lonlat.rs  quadbin_from_tile.rs  quadbin_kring.rs  quadbin_pixel_xy.rs  quadbin_polyfill.rs  quadbin_resolution.rs  quadbin_sibling.rs  quadbin_to_bbox.rs  quadbin_to_bbox_mercator.rs  quadbin_to_bbox_wgs84.rs  quadbin_to_children.rs  quadbin_to_geojson.rs  quadbin_to_lonlat.rs  quadbin_to_parent.rs  quadbin_to_tile.rs  quadbin_to_wkt.rs  testing.rs
rust/datafusion-raquet/src/udf/raster/: cast_raquet.rs  decode.rs  decompress.rs  mod.rs  native.rs  parquet_decode.rs  parquet_native.rs  parquet_statistics.rs  parquet_value.rs  raquet_pixel.rs  raquet_value.rs  raster_value.rs  statistics.rs  testing.rs  utils.rs
rust/datafusion-raquet/src/views/: mod.rs  read_raquet.rs  read_raquet_at.rs  read_raquet_metadata.rs  util.rs
rust/geo-rasterizer/src/: lib.rs  poly.rs
rust/quadbin-geo-rs/src/: base.rs  error.rs  formats.rs  lib.rs  proj.rs  rasterizer.rs  tiles.rs  transforms.rs
rust/quadbin-rs/src/: error.rs  lib.rs
rust/quadbin-schema/src/: datatype.rs  lib.rs  metadata.rs  type.rs
rust/rastertile-rs/: Cargo.toml
rust/rastertile-rs/src/: error.rs
rust/rastertile-rs/src/compression/: error.rs  mod.rs  webp.rs
rust/rastertile-rs/src/core/: mod.rs
rust/rastertile-rs/src/data_types/: error.rs  mod.rs
rust/rastertile-rs/src/metadata/: mod.rs
rust/rastertile-schema/: Cargo.toml
rust/rastertile-schema/src/: datatype.rs  lib.rs  metadata.rs  type.rs
(+7 files in other folders)
