[workspace]
members = ["rust/datafusion-raquet","rust/rastertile-rs","rust/rastertile-schema","rust/quadbin-schema","rust/quadbin-rs","rust/quadbin-geo-rs", "rust/geo-rasterizer"]
exclude = ["python"]

resolver = "2"

[workspace.package]
name = "datafusion-raquet"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

bytemuck = { version = "1.24", features = ["extern_crate_alloc"] }
byteorder = "1"
bytes = "1.7.0"

flate2 = "1.1.9"
jpeg-decoder = "0.3"
image-webp = "0.2.4"

serde = "1"
serde_json = "1"
serde_with = "3"

thiserror = "1"

futures = "0.3"

arrow = { version = "58" }
arrow-array = { version = "58" }
arrow-schema = { version = "58" }
datafusion = { version = "53" ,default-features = false }
# datafusion-common = { version = "53" }
datafusion-sql = { version = "53" }
datafusion-datasource = { version = "53", default-features = false }
datafusion-datasource-parquet = "53"
# datafusion-python-util = { version = "53"}

datafusion-raquet = { path = "rust/datafusion-raquet", version = "0.1.0" }


geo-rasterizer =  { path = "rust/geo-rasterizer", version = "0.1.0" }

parquet = { version = "58", default-features = false }

quadbin-rs = { path = "rust/quadbin-rs", version = "0.1.0" }
quadbin-geo-rs = { path = "rust/quadbin-geo-rs", version = "0.1.0" }

rastertile-rs = { path = "rust/rastertile-rs", version = "0.1.0" }

rastertile-schema = { path = "rust/rastertile-schema", version = "0.1.0" }

quadbin-schema = { path = "rust/quadbin-schema", version = "0.1.0" }

tokio = { version = "1.9", features = ["rt", "macros", "net", "rt-multi-thread"] }

url = "2"
