[workspace]
members = ["crates/datafusion-raquet","crates/rastertile-rs","crates/rastertile-schema","crates/quadbin-schema","crates/quadbin-rs","crates/quadbin-geo-rs", "crates/geo-rasterizer"]

resolver = "2"

[workspace.package]
name = "datafusion-raquet"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Mayer <jonrmayer@yahoo.com>"]
license = "Apache-2.0"
repository = "https://github.com/jonrmayer/datafusion-raquet"
categories = ["science::geo"]
description = "Raquet extension for Apache DataFusion"

[workspace.dependencies]

bytemuck = { version = "1.24", features = ["extern_crate_alloc"] }
byteorder = "1"
bytes = "1.7.0"

flate2 = "1.1.9"
jpeg-decoder = "0.3"
image-webp = "0.2.4"

serde = "1"
serde_json = "1"
serde_with = "3"

thiserror = "1"

futures = "0.3"

arrow = { version = "58" }
arrow-array = { version = "58" }
arrow-schema = { version = "58" }
datafusion = { version = "53.1" ,default-features = false }
# datafusion-common = { version = "53.1" }
datafusion-sql = { version = "53.1" }
datafusion-datasource = { version = "53.1", default-features = false }
datafusion-datasource-parquet = "53.1"
# datafusion-python-util = { version = "53.1"}

datafusion-raquet = { path = "crates/datafusion-raquet", version = "0.1.0" }


geo-rasterizer =  { path = "crates/geo-rasterizer", version = "0.1.0" }

parquet = { version = "58", default-features = false }

quadbin-rs = { path = "crates/quadbin-rs", version = "0.1.0" }
quadbin-geo-rs = { path = "crates/quadbin-geo-rs", version = "0.1.0" }

rastertile-rs = { path = "crates/rastertile-rs", version = "0.1.0" }

rastertile-schema = { path = "crates/rastertile-schema", version = "0.1.0" }

quadbin-schema = { path = "crates/quadbin-schema", version = "0.1.0" }

tokio = { version = "1.9", features = ["rt", "macros", "net", "rt-multi-thread"] }

url = "2"
