[package]
name = "datafusion-raquet-python"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "datafusion_raquet_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.0"

arrow-array = { version = "58" }
arrow-schema = { version = "58" }
datafusion = { version = "54", default-features = false }
datafusion-ffi = "54"
datafusion-catalog = "54"
datafusion-common = { version = "54", default-features = false }

datafusion-expr = { version = "54" }
datafusion-python-util = { version = "54" }
# datafusion-python = { version = "54" }
tokio = { version = "1.9", features = ["rt", "macros", "net", "rt-multi-thread"] }


datafusion-raquet = { path = "../rust/datafusion-raquet" }
# datafusion-raquet = { workspace = true }
