[package]
name = "quadbin-geo-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
euclid = "0.22.14"
geo-types = "=0.7.19"
geo = "0.33.1"
wkt = "0.14.0"
geojson = "1.0.0"
quadbin-rs = { workspace = true }
geo-rasterizer = { workspace = true }
vaster = "0.1.0"
thiserror = { workspace = true }
